; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/power/extr_ds2782_battery.c_ds2782_battery_remove.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/power/extr_ds2782_battery.c_ds2782_battery_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.i2c_client = type { i32 }
%struct.ds2782_info = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { %struct.ds2782_info* }

@battery_lock = common dso_local global i32 0, align 4
@battery_id = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.i2c_client*)* @ds2782_battery_remove to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ds2782_battery_remove(%struct.i2c_client* %0) #0 {
  %2 = alloca %struct.i2c_client*, align 8
  %3 = alloca %struct.ds2782_info*, align 8
  store %struct.i2c_client* %0, %struct.i2c_client** %2, align 8
  %4 = load %struct.i2c_client*, %struct.i2c_client** %2, align 8
  %5 = call %struct.ds2782_info* @i2c_get_clientdata(%struct.i2c_client* %4)
  store %struct.ds2782_info* %5, %struct.ds2782_info** %3, align 8
  %6 = load %struct.ds2782_info*, %struct.ds2782_info** %3, align 8
  %7 = getelementptr inbounds %struct.ds2782_info, %struct.ds2782_info* %6, i32 0, i32 1
  %8 = call i32 @power_supply_unregister(%struct.TYPE_2__* %7)
  %9 = load %struct.ds2782_info*, %struct.ds2782_info** %3, align 8
  %10 = getelementptr inbounds %struct.ds2782_info, %struct.ds2782_info* %9, i32 0, i32 1
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load %struct.ds2782_info*, %struct.ds2782_info** %11, align 8
  %13 = call i32 @kfree(%struct.ds2782_info* %12)
  %14 = call i32 @mutex_lock(i32* @battery_lock)
  %15 = load %struct.ds2782_info*, %struct.ds2782_info** %3, align 8
  %16 = getelementptr inbounds %struct.ds2782_info, %struct.ds2782_info* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 8
  %18 = call i32 @idr_remove(i32* @battery_id, i32 %17)
  %19 = call i32 @mutex_unlock(i32* @battery_lock)
  %20 = load %struct.i2c_client*, %struct.i2c_client** %2, align 8
  %21 = load %struct.ds2782_info*, %struct.ds2782_info** %3, align 8
  %22 = call i32 @i2c_set_clientdata(%struct.i2c_client* %20, %struct.ds2782_info* %21)
  %23 = load %struct.ds2782_info*, %struct.ds2782_info** %3, align 8
  %24 = call i32 @kfree(%struct.ds2782_info* %23)
  ret i32 0
}

declare dso_local %struct.ds2782_info* @i2c_get_clientdata(%struct.i2c_client*) #1

declare dso_local i32 @power_supply_unregister(%struct.TYPE_2__*) #1

declare dso_local i32 @kfree(%struct.ds2782_info*) #1

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @idr_remove(i32*, i32) #1

declare dso_local i32 @mutex_unlock(i32*) #1

declare dso_local i32 @i2c_set_clientdata(%struct.i2c_client*, %struct.ds2782_info*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
